--- a/BeeHive/BeeHive-Info.plist
+++ b/BeeHive/BeeHive-Info.plist
@@ -27,7 +27,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright (c) 2014 French Fries All Rights Reserved</string>
+	<string>Copyright (c) 2014 FrenchFries Apps, LLC All Rights Reserved</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
